--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "form-data": "^4.0.0",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^10.2.1"
   }
 }
