--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-email-editor": "^1.7.10",
+    "react-google-charts": "^4.0.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.1",
