--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dompurify": "^3.1.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
     "form-data": "^4.0.0",
-    "mailgun-js": "^0.22.0",
-    "mailgun.js": "^10.2.1"
+    "mongoose": "^8.4.0"
   }
 }
