--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "\"Email Optimisation\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "\"Mohammad Adil\"",
   "license": "ISC",
@@ -15,7 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
-    "form-data": "^4.0.0",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^8.4.0"
   }
 }
