--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
-    "dompurify": "^3.1.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
